--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>😁</title>
+  <title>CV</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="Poorna.jpg" alt="Poorna profile picture" width="180" height="200"> </td>
+      <td> <img src="images/Poorna.jpg" alt="Poorna profile picture" width="180" height="200"> </td>
       <td>
         <h1>Poornachandra J S</h1>
         <p><em><strong>Student-Computer Application (<a href="https://careers.wipro.com/campus-science-wista.aspx">Wipro</a>)</strong></em></p>
@@ -84,7 +86,9 @@
   <hr>
 
 
-  <a href="contact-me.html"><h3>Contact Me</h3></a>
+  <a href="contact-me.html">
+    <h3>Contact Me</h3>
+  </a>
 
 </body>
 
